insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1116,3 +1116,11 @@ li .dot {
 .input-field tr {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
+
+.add_fields {
+  margin-top:5px;
+}
+
+.remove_fields {
+  margin-top:15px;
+}
